crates/llvmkit-ir/tests/compile_fail/finished_phi_cannot_reopen_through_instruction_kind.stderr
error[E0599]: no method named `add_incoming` found for enum `PhiKind<'ctx, B>` in the current scope
  --> tests/compile_fail/finished_phi_cannot_reopen_through_instruction_kind.rs:29:30
   |
29 |             let _ = reopened.add_incoming(2_i32, other_label);
   |                              ^^^^^^^^^^^^ method not found in `PhiKind<'_, Brand<'_>>`
